# open

./: Makefile  README.md  batchsumV1.c  batchsumV2.c  batchsumV4.c  batchsumV5.c  fib.c  go.mod  go.sum
accumulator/: Makefile  batchsumV1.c  batchsumV2.c  batchsumV3.c  batchsumV4.c  batchsumV5.c
accumulator/go/: Makefile  batchsumV1.go  batchsumV2.go  batchsumV3.go  batchsumV4.go
actix-web-helloworld/: Cargo.toml
actix-web-helloworld/src/: lib.rs  main.rs
audio/: README.md
audio/microphone/: README.md  microphone.go  types.go
audio/opus2wav/: Makefile  main.c
audio/replay/: docs.go  replay.go  types.go
audio/vad/: README.md
audio/vad_split/: Makefile  requirements.txt  vad_split.py
audio/vad_split_go/: Makefile  main.go
audio/wav2opus/: Makefile  main.c
audio/wav2vorbis/: Makefile  main.c
audio/wav_reader/: Makefile  main.c
clang/sqlite-tutorial/: CMakeLists.txt  Makefile  README.md  autocommit.c  column_names.c  create_table.c  delete_record.c  get_ac_mode.c  insert.c  insert_data.c  last_row_id.c  list_tables.c  named_placeholders.c  parameterized.c  select_all.c  transaction.c  version.c  version2.c
concurrent-programming/: README.md
cpuinfo/: README.md
go/: Makefile  batchsumV5.go  batchsumV6.go
httpie/: Cargo.toml
langchain/: README.md
ntp/: README.md  go.mod
queue/: Makefile  README.md  bounded_lock_queue.c
serial-proxy/: Makefile  main.c
shortcut/: README.md
sizecmp/: Cargo.toml  README.md
syscall/: Makefile  README.md  epoll.go  file.go  go.mod  setns.c
trie_tree/: Makefile  README.md  go.mod  main.go
(+83 files in other folders)
